--- a/style.css
+++ b/style.css
@@ -3,25 +3,28 @@
     font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 }
 
-
+nav{
+    /* position: fixed; */
+    
+}
 #navbar{
+    
     display: flex;
+    /* border: 1px solid; */
     text-align: center;
+    /* position: fixed; */
     margin: auto;
     /* border: 1px solid; */
     box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
     /* width: 30%; */
 }
 #navbar>div{
-    /* width: 25%; */
     margin: auto;
 }
 #items{
-    /* border: 1px solid ; */
     display: flex;
     justify-content:space-evenly;
     gap: 80px;
-    /* text-decoration: none; */
 }
 a{
     text-decoration: none;
@@ -34,13 +37,15 @@ a{
     margin-left:0px ;
 }
 #para2{
+    padding: 20px;
+    margin-top: 90px;
+    margin: auto;
+    width: 90%;
+    background-color: rgb(224, 248, 255);
     display: grid;
     grid-template-columns: repeat(3,1fr);
 }
-#btn{
-    background-color:white;
-    border: none;
-}
+/*  */
 #para2>div{
     margin: auto;
     width: 35%;
@@ -48,29 +53,52 @@ a{
 }
 #para2>div:hover{
     box-shadow: rgba(0, 0, 0, 0.2) 0px 18px 50px -10px;
-    border-radius: 20px;
-    /* height: 90%; */
+    border-radius: 15px;
+    
+    /* background-color: white; */
+
 }
 #para2>a{
     margin: auto;
 }
 
 #offers{
-    border: 1px solid;
+    /* border: 1px solid; */
+    padding-top: 50px;
+    padding-bottom: 40px;
    display: flex; 
-   margin: auto;
+   width: 90%;
 }
 #offers>div{
+    /* border: 1px solid; */
     display: flex;
     margin: auto;
+    gap: 15px;
+    margin-bottom: 20px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
-
+#offers>div:hover{
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
+#offers>div:nth-child(3){
+    padding: 0px 20px 0px 20px;
+    display: flex;
+    flex-direction: column;
+}
+#offers>div:nth-child(3)>i{
+    text-align: center;
+    margin-bottom: 0px;
+}
+#offers>div:nth-child(3)>p{
+    margin-top:0px ;
+}
 /* search bar  */
 
 #searchpara{
     margin: auto;
-    width: 50%;
-    margin-bottom: 20px;
+    width: 60%;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 #searchpara>h1{
     font-size: 25px;
@@ -78,12 +106,14 @@ a{
     margin-left: 20px;
 }
 #search>input{
+    padding: 5px;
     border-color: rgb(110, 110, 110);
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
      height: 35px;
      width: 100%;
-     border-radius: 20px; 
-     /* margin-bottom: 20px;    */
+     font-size: 18px;
+     padding-left: 25px;
+     border-radius: 25px; 
 }
 #search{
     display: flex;
@@ -91,15 +121,19 @@ a{
 #search>button{
     border-color: none;
     border: none;
-    border-radius: 20px;
-    margin-left: -50px;
+    border-radius: 25px;
+    margin-left: -117px;
     width: 120px;
     background-color: rgb(4, 156, 156);
     color: white;
 }
 #para3{
+    padding: 20px;
     display: flex;
     gap: 30px;
+    width: 90%;
+    /* border: 1px solid; */
+    margin: auto;
     margin: 30px 0px 50px 0px;
     
 }
@@ -108,3 +142,237 @@ a{
 }
 
 
+
+#ord{
+    /* order: 1px solid; */
+    border: 1px solid;
+    display: flex;
+    gap: 20px;
+    padding: 20px;
+    align-items: center;
+    background-color: #e1ecfe;
+}
+#num1{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+}
+#num1>div{
+    display: flex;
+    gap: 20px;
+}
+.nu{
+    border: 1px solid;
+    padding: 13px;
+    background-color: #b4d3fa;
+    border-radius: 7px;
+}
+#choose{
+    padding: 40px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    background-color: #e8f0fa;
+}
+
+#del{
+    display: flex;
+    gap: 40px;
+}
+#del>div{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+#customer{
+    display: flex;
+    text-align: left;
+    gap: 20px;
+    height: 100%;
+    width: 100%;
+
+
+}
+#our>div>p{
+    margin-top: -13px;
+}
+#our>div:nth-child(2){
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    background-color: rgb(219, 254, 243);
+    padding:15px ;
+}
+#sec3{
+    padding: 20px;
+}
+#sec3>h1{
+    font-size: 30px;
+
+}
+
+#sec4{
+    /* border: 1px solid; */
+    padding: 10px;
+    margin: 30px;
+    /* width: 20%; */
+    margin-top:50px ;
+    margin: auto;
+    margin-bottom: 40px;
+}
+/* #last{
+    
+} */
+#last>h1{
+    font-size: 35px;
+}
+#last>p{
+    font-size: 20px;
+}
+.lastmain{
+    /* border: 1px solid; */
+    width: 30%;
+    margin: auto;
+    /* align-items: center; */
+    margin-top: 60px;
+}
+#sec4{
+    margin-top: 30px;
+    margin-bottom: 70px;
+    height: 350px;
+   background-color:rgb(172, 252, 252);
+    background-image: url(https://assets.pharmeasy.in/apothecary/images/downloadBanner.webp?dim=1440x0&q=100);
+    background-size: 100%;
+}
+
+/* footer */
+#footer{
+    padding: 40px;
+    width: 97%;
+    margin: auto;
+    background-color: rgb(234, 249, 253);
+}
+#tables{
+    padding: 20px;
+}
+th{
+    width: 23%;
+    text-align: left;
+    font-weight: 600;padding-bottom: 10px;
+    font-size: 19px;
+}
+td{
+    padding:1px; 
+}
+#payment{
+    width: 60%;
+}
+#payment>img{
+    padding: 10px;
+    margin: 0px 5px 0px 10px;
+    height: 20px;
+
+}
+#payments{
+display: flex;
+}
+#payments>p{
+width: 40%;
+margin:10px 30px 0px 0px;
+align-content: center;
+text-align: right;
+}
+
+
+/* login button */
+#myBtn{
+    background-color: white;
+    border: none;
+    font-size: 22px;
+}
+
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 35%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+  }
+  
+  /* Add Animation */
+  @-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+  }
+  
+  @keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+  }
+  
+  /* The Close Button */
+  .close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .modal-header {
+    padding: 2px 0px;
+    background-color: #1e8d9c;
+    color: white;
+  }
+  .modal-header>p{
+    margin-top: -25px;
+    /* border: 1px solid; */
+  }
+  .modal-header>h1{
+    font-size: 30px;
+  }
+  .modal-body {padding: 35px 16px;
+      margin-left: 20px;
+  }
+  
+  .modal-body>input{
+      padding: 5px;
+      margin: 10px 0px 10px 10px;
+  }
+  
+  .modal-footer {
+    padding: 5px 16px;
+    background-color: #1e8d9c;
+  }
+  .modal-header>img{
+      height: 80px;
+  }
+  /* #footer{
+    width: 100%;
+  } */
